--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,10 +7,8 @@ build:
 
 python:
   # Install our python package before building the docs
-  version: 3.8
   install:
-    - requirements: docs/requirements.txt
-    - method: pip
+    - method: setuptools
       path: .
 
 sphinx:
